refactor: update openapi conventions
