# src/app.ts
@@ -5,7 +5,7 @@ import path from "path";
 //import cors from "cors";
 
 import SystemRouter from "./api/system/SystemRouter";
-import TraderRouter from "./api/trader/TraderRouter";
+import TradesRouter from "./api/trades/TradesRouter";
 
 //import { errorHandler, notFoundHandler } from "./lib/middlewares";
 
@@ -16,7 +16,7 @@ app.use(express.json());
 //app.use(cors({ origin: "*" }));
 
 app.use("/api/v1/system", SystemRouter);
-app.use("/api/v1/trader", TraderRouter);
+app.use("/api/v1/trades", TradesRouter);
 
 app.use("/api-docs", swaggerUi.serve, swaggerUi.setup(openApiSpec));
 
